--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "celebrate": "^15.0.3",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "joi": "^17.13.3"
+    "joi": "^17.13.3",
+    "pug": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
