--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "celebrate": "^15.0.3",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "joi": "^17.13.3",
-    "pug": "^3.0.3"
+    "jsonwebtoken": "^9.0.2",
+    "pug": "^3.0.3",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
