--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "first-express-app",
+  "name": "express-middleware-app",
   "version": "1.0.0",
-  "main": "index.mjs",
-  "license": "MIT",
+  "description": "Express.js application with middleware examples",
+  "type": "module",
+  "main": "src/app.mjs",
   "scripts": {
     "start": "node src/app.mjs",
     "dev": "nodemon src/app.mjs"
   },
   "dependencies": {
-    "celebrate": "^15.0.3",
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^14.0.0",
     "cookie-parser": "^1.4.6",
-    "ejs": "^3.1.10",
-    "express": "^4.21.2",
-    "joi": "^17.13.3",
-    "jsonwebtoken": "^9.0.2",
-    "pug": "^3.0.3",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "pug": "^3.0.2",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.0.2"
   }
 }
