--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "express-middleware-app",
   "version": "1.0.0",
-  "description": "Express.js application with middleware examples",
+  "description": "Express.js application with middleware examples and MongoDB Atlas integration",
   "type": "module",
   "main": "src/app.mjs",
   "scripts": {
     "start": "node src/app.mjs",
-    "dev": "nodemon src/app.mjs"
+    "dev": "nodemon src/app.mjs",
+    "init-db": "node src/scripts/initDb.mjs",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "celebrate": "^14.0.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongoose": "^8.3.5",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
