--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node src/app.mjs",
     "dev": "nodemon src/app.mjs",
     "init-db": "node src/scripts/initDb.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-new-routes": "node test-new-routes.mjs"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -19,6 +20,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^8.3.5",
+    "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
